# corenlp-haskell

./: .gitignore  .travis.yml  README.md  corenlp-haskell.cabal  stack.yaml  trying.txt
app/: Main.hs
examples/: 10_10.html.conll  22641.html.conll  22849.html.conll  C_2017221EN.01002101.xml.html.conll  L_2008218EN.01000101.xml.html.conll  L_2009168EN.01004101.xml.html.conll  M_5aa8ecd2-b7d3-420d-89b6-71c77632f0df.html.conll  R_d154000c-1b62-4135-85aa-1ccd3043e1cb.html.conll  eur-lex.europa.eu.html.conll  inputs.txt  inputs.txt.conll  inputs.txt.conll.result  inputs.txt.json  inputs.txt.xml  judgement.html  judgement.html.conll  judgement.html.json  judgement.html.xml  script.sh  trying.txt.conll
script/: script.sh
src/: Examples.hs
src/Data/: CoNLL.hs  Label.hs  ParsedSentence.hs
test/Data/: CoNLLSpec.hs
