

name:                corenlp-haskell
version:             0.1.0.0
synopsis:            library to work with standford's corenlp tool
description:         Please see README.md
homepage:            https://github.com/mgajda/corenlp-haskell
license:             AllRightsReserved
author:              Alejandro D. P.
maintainer:          vwwv@correo.ugr.es
category:            API
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10



library
  hs-source-dirs:      src
  
  exposed-modules:     Data.ParsedSentence
                 ,     Data.CoNLL


  default-extensions:          NoImplicitPrelude
                             , BangPatterns
                             , BinaryLiterals
                             , DataKinds
                             , ConstraintKinds
                             , DeriveFunctor
                             , DeriveGeneric
                             , DisambiguateRecordFields
                             , DuplicateRecordFields
                             , EmptyDataDecls
                             , FlexibleInstances
                             , FlexibleContexts
                             , FunctionalDependencies
                             , GADTs
                             , GeneralizedNewtypeDeriving
                             , LambdaCase
                             , MonadComprehensions
                             , MultiParamTypeClasses
                             , MultiWayIf
                             , OverloadedStrings
                             , PartialTypeSignatures
                             , PatternSynonyms
                             , RankNTypes
                             , RecordWildCards
                             , RecursiveDo
                             , ScopedTypeVariables
                             , StandaloneDeriving
                             , TemplateHaskell
                             , TupleSections
                             , TypeFamilies
                             , TypeOperators
                             , TypeSynonymInstances

  build-depends:       protolude
                     , base
                     , split
                     , text
                     
  ghc-options:         -Wall -fno-warn-deprecations
                             -fno-warn-dodgy-imports
                             -fno-warn-orphans
                             -fno-warn-partial-type-signatures
                             -fno-warn-type-defaults
                             -fno-warn-unused-imports
                             -fno-warn-unused-matches
                             -Werror


  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mgajda/corenlp-haskell



