

name:                corenlp-haskell
version:             0.1.0.0
synopsis:            library to work with standford's corenlp tool
description:         Please see README.md
homepage:            https://github.com/mgajda/corenlp-haskell
license:             AllRightsReserved
author:              Alejandro D. P.
maintainer:          vwwv@correo.ugr.es
category:            API
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable corenlp-parser
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       corenlp-haskell
                     , base
                     , protolude
                     , pretty-show


  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

  ghc-options:         -Wall -fwarn-incomplete-patterns
                             -fwarn-incomplete-record-updates
                             -Werror
                             -fno-warn-unused-matches
                             -fno-warn-unused-imports
                             -fno-warn-dodgy-imports
                             -fno-warn-type-defaults

  default-language:    Haskell2010


library
  hs-source-dirs:      src
  
  exposed-modules:     Data.CoNLL
                 ,     Examples


  default-extensions:          NoImplicitPrelude
                             , BangPatterns
                             , BinaryLiterals
                             , ConstraintKinds
                             , DataKinds
                             , DefaultSignatures
                             , DeriveFunctor
                             , DeriveGeneric
                             , DisambiguateRecordFields
                             , DuplicateRecordFields
                             , EmptyDataDecls
                             , FlexibleContexts
                             , FlexibleInstances
                             , FunctionalDependencies
                             , GADTs
                             , GeneralizedNewtypeDeriving
                             , LambdaCase
                             , MonadComprehensions
                             , MultiParamTypeClasses
                             , MultiWayIf
                             , OverloadedStrings
                             , PartialTypeSignatures
                             , PatternSynonyms
                             , RankNTypes
                             , RecordWildCards
                             , RecursiveDo
                             , ScopedTypeVariables
                             , StandaloneDeriving
                             , TemplateHaskell
                             , TupleSections
                             , TypeFamilies
                             , TypeInType
                             , TypeOperators
                             , TypeSynonymInstances

  build-depends:       base
                     , containers
                     , haskell-conll
                     , pretty-show
                     , protolude
                     , split
                     , text
                     
  ghc-options:         -Wall -fno-warn-deprecations
                             -fno-warn-dodgy-imports
                             -fno-warn-orphans
                             -fno-warn-partial-type-signatures
                             -fno-warn-type-defaults
                             -fno-warn-unused-imports
                             -fno-warn-unused-matches
                             -Werror


  default-language:    Haskell2010

test-suite corenlp-parser-test-suite
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  other-modules:     Data.CoNLLSpec
               
  hs-source-dirs:    test
  ghc-options:       -Wall

  build-depends:       corenlp-haskell
                     , protolude
                     , base
                     , hspec
                     , tasty
                     , tasty-hspec
                     , tasty-quickcheck
                     , QuickCheck

  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

  ghc-options:         -Wall -fwarn-incomplete-patterns 
                             -fwarn-incomplete-record-updates 
                             -Werror 
                             -fno-warn-unused-matches
                             -fno-warn-unused-imports
                             -fno-warn-dodgy-imports
                             -fno-warn-type-defaults
                             -fno-warn-orphans
                             -fno-warn-deprecations
  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/mgajda/corenlp-haskell



